Fix build process and eliminate old reader code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.18)
 project(c12test)
-set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/Modules/")
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+add_subdirectory(C12Adapter)
+set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(src)
 add_subdirectory(doc)
 SET(CPACK_SOURCE_IGNORE_FILES "/build/;.swp;.git")
