--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.18)
 set(EXECUTABLE_NAME "c12test")
 find_package(MeteringSDK REQUIRED)
-add_executable(${EXECUTABLE_NAME} reader.cpp Setup.cpp)
-add_executable(autoreader autoreader.cpp Setup.cpp)
+add_executable(${EXECUTABLE_NAME} autoreader.cpp Setup.cpp)
 target_compile_options(${EXECUTABLE_NAME} PRIVATE "-Wall;-Wextra")
-target_compile_options(autoreader PRIVATE "-Wall;-Wextra")
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR})
-target_include_directories(autoreader PRIVATE ${METERINGSDK_INCLUDE_DIR})
 target_link_libraries(${EXECUTABLE_NAME} ${METERINGSDK_LIBS})
-target_link_libraries(autoreader ${METERINGSDK_LIBS})
-INSTALL(TARGETS ${EXECUTABLE_NAME} autoreader DESTINATION bin)
+INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
