--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 set(EXECUTABLE_NAME "c12test")
 find_package(MeteringSDK REQUIRED)
-add_executable(${EXECUTABLE_NAME} autoreader.cpp Setup.cpp)
+add_executable(${EXECUTABLE_NAME} autoreader.cpp C12Tables.cpp Setup.cpp)
 target_compile_options(${EXECUTABLE_NAME} PRIVATE "-Wall;-Wextra")
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR})
 target_link_libraries(${EXECUTABLE_NAME} ${METERINGSDK_LIBS})
