--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.16)
 set(EXECUTABLE_NAME "c12test")
 #find_package(MeteringSDK OPTIONAL)
-add_executable(${EXECUTABLE_NAME} autoreader.cpp C12Tables.cpp Setup.cpp)
+add_library(C12Tables C12Tables.cpp)
+add_executable(${EXECUTABLE_NAME} autoreader.cpp Setup.cpp)
 target_compile_options(${EXECUTABLE_NAME} PRIVATE "-Wall;-Wextra")
 target_compile_features(${EXECUTABLE_NAME} PUBLIC cxx_std_17)
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR} ${METERINGSDK_BINARY_DIR})
@@ -12,5 +13,5 @@ find_library(METERINGSDK_MCOM_LIBS
     NAMES MCOM
     HINTS ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 set(METERINGSDK_LIBS "${METERINGSDK_MCORE_LIBS}" "${METERINGSDK_MCOM_LIBS}")
-target_link_libraries(${EXECUTABLE_NAME} ${METERINGSDK_LIBS})
-INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
+target_link_libraries(${EXECUTABLE_NAME} ${METERINGSDK_LIBS} C12Tables) 
+install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
