Start to address documentation issue #6.
Add better customization of the documentation and start on some
more descriptive documents as placeholders.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,12 +1,20 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.16)
 
 # Add API Reference generation
-find_package(Doxygen)
+find_package(Doxygen 1.8.16)
+set(MD_SOURCES 01_intro.md 02_building.md)
+set(IMAGE_PATH "images")
+set(DEST_IMAGE_PATH "${CMAKE_BINARY_DIR}/${IMAGE_PATH}")
 if(DOXYGEN_FOUND)
     configure_file(
-        "${CMAKE_CURRENT_SOURCE_DIR}/doxygen.conf.in"
-        "${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf"
+        "doxygen.conf.in"
+        "doxygen.conf"
         @ONLY
+    )
+    configure_file(
+        "header.tex"
+        "header.tex"
+        COPYONLY
     )
     add_custom_target(
         doc
@@ -14,7 +22,8 @@ if(DOXYGEN_FOUND)
         "${CMAKE_CURRENT_BINARY_DIR}/doxygen.conf"
         OUTPUT  "${CMAKE_CURRENT_BINARY_DIR}/html/index.html"
         WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
-        COMMENT "Generating code documentation..." VERBATIM
+        DEPENDS "${MD_SOURCES}"
+        COMMENT "Generating reference documentation..." VERBATIM
     )
     add_custom_target(
         pdf
@@ -25,7 +34,7 @@ if(DOXYGEN_FOUND)
         COMMAND "make"
         DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/html/index.html"
         WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/latex"
-        COMMENT "Generating PDF format code documentation..." VERBATIM
+        COMMENT "Generating PDF format reference documentation..." VERBATIM
     )
 
 endif(DOXYGEN_FOUND)
