--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.16)
 set(EXECUTABLE_NAME "c12test")
-add_library(C12Tables C12Tables.cpp)
+add_library(C12Tables STATIC C12Tables.cpp)
 target_compile_features(C12Tables PUBLIC cxx_std_17)
 add_executable(${EXECUTABLE_NAME} autoreader.cpp Setup.cpp)
 if (MSVC)
     # warning level 4 and all warnings as errors
-    target_compile_options(${EXECUTABLE_NAME} PRIVATE "/W4;/WX")
+    target_compile_options(${EXECUTABLE_NAME} PRIVATE "/WX")
 else()
     # lots of warnings and all warnings as errors
     target_compile_options(${EXECUTABLE_NAME} PRIVATE "-Wall;-Wextra;-Wno-expansion-to-defined")
 endif()
 target_compile_features(${EXECUTABLE_NAME} PUBLIC cxx_std_17)
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR} ${METERINGSDK_BINARY_DIR})
-target_link_libraries(${EXECUTABLE_NAME} MCOM MCORE C12Tables) 
+target_link_libraries(${EXECUTABLE_NAME} PUBLIC MCOM MCORE PRIVATE C12Tables) 
 install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
