Add license for MeteringSDK and add license to installer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,5 +59,6 @@ add_subdirectory(src)
 set(CPACK_SOURCE_IGNORE_FILES "/build/;.swp;.git")
 set(CPACK_PACKAGE_VENDOR "EPRI")
 set(CPACK_SOURCE_GENERATOR "TGZ")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 include(InstallRequiredSystemLibraries)
 include (CPack)
