--- a/doc/doxygen.conf.in
+++ b/doc/doxygen.conf.in
@@ -808,7 +808,8 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = @CMAKE_SOURCE_DIR@/src \
-                         @CMAKE_SOURCE_DIR@/doc
+                         @CMAKE_SOURCE_DIR@/doc \
+                         @METERINGSDK_INCLUDE_DIR@ 
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
