--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ else()
 endif()
 add_library(C12Tables STATIC C12Tables.cpp C12Meter.cpp)
 target_compile_features(C12Tables PUBLIC cxx_std_17)
+target_include_directories(C12Tables PRIVATE ${METERINGSDK_INCLUDE_DIR} ${METERINGSDK_BINARY_DIR})
 target_compile_features(${EXECUTABLE_NAME} PUBLIC cxx_std_17)
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${METERINGSDK_INCLUDE_DIR} ${METERINGSDK_BINARY_DIR})
 target_link_libraries(${EXECUTABLE_NAME} PUBLIC MCOM MCORE PRIVATE C12Tables) 
