Add EPRI copyright strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if(NOT ${lcName}_POPULATED)
     option(BUILD_EXAMPLES OFF)
     set(M_PRODUCT_NAME "c12test")
     set(M_COMPANY_NAME "EPRI")
-    set(M_PRODUCT_LEGAL_COPYRIGHT "EPRI")
+    set(M_PRODUCT_LEGAL_COPYRIGHT "Copyright (c) 2021 EPRI")
     set(M_PRODUCT_VERSION    ${PROJECT_VERSION})
     set(M_NO_AUTOMATION 1)
     set(METERINGSDK_INCLUDE_DIR "${${lcName}_SOURCE_DIR}/src/MeteringSDK")
